# UK-Demographic-Change-Under-Alternative-Migration-and-Demographic-Scenarios-2022-2122

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml
assumptions/: assumption_register.csv
configs/: nomis_mye_codes.yml  nomis_nm2132_codes.yml  ons_npp_2022_scenarios.yml
configs/harmonisation/: ethnic_category_mapping.csv
data/: .gitignore
data/manifests/: nomis_manifest_summary.json  ons_manifest_summary.json
data/processed/: base_population_mid2022.json
data/raw/nomis/: manifest.jsonl
data/raw/ons/: manifest.jsonl
docs/: main.tex  references.bib  scenarios.md
notebooks/: .gitkeep
outputs/census_2021_mid2022_baseline/: projection_summary.md
outputs/illustrative_demonstration/: projection_summary.md
outputs/migration_high_2022npp/: projection_summary.md
outputs/migration_low_2022npp/: projection_summary.md
outputs/migration_zero/: projection_summary.md
reports/: data_availability.md  methodological_design.md  pre_publication_review.md  unresolved_parameters.md
scenarios/: census_2021_mid2022_baseline.yml  illustrative_demonstration.yml  migration_high_2022npp.yml  migration_low_2022npp.yml  migration_zero.yml
scripts/: download_life_tables.py  probe_births.py  probe_deaths_page.py  probe_mortality.py  probe_npp_migration.py  probe_ons_downloads.py  search_nomis_datasets.py
src/ukethnicproj/: __init__.py  __main__.py  cli.py  config.py
src/ukethnicproj/base_population/: __init__.py  builder.py
tests/: test_base_population.py  test_calibration.py  test_data_parsers.py  test_data_sources.py  test_projection.py
(+44 files in other folders)
