[project]
name = "ukethnicproj"
version = "0.1.0"
description = "UK ethnic demographic change under alternative migration and demographic scenarios, 2022–2122"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Scott Brodie Forsyth" }]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "pydantic>=2.6",
    "pandera>=0.20",
    "pyyaml>=6.0",
    "scipy>=1.12",
    "xarray>=2024.3",
    "duckdb>=0.10",
    "matplotlib>=3.8",
    "click>=8.1",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.3",
]
probabilistic = [
    "pymc>=5.12",
    "arviz>=0.18",
]

[project.scripts]
ukethnicproj = "ukethnicproj.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ukethnicproj"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: tests requiring live API access",
]

[tool.ruff]
line-length = 100
target-version = "py312"
